set(SEA_PORT_SHARE_DIRS
            maps
            scene
            ship )

set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/share/${PROJECT_NAME}" )
file(COPY ${SEA_PORT_SHARE_DIRS} DESTINATION ${EXECUTABLE_OUTPUT_PATH})
install(DIRECTORY ${SEA_PORT_SHARE_DIRS} DESTINATION share/${PROJECT_NAME})
